# ProjectCalamity

./: .gitignore  Cargo.toml  README.md  config.toml
assets/fonts/: atkinson_hyperlegible_bold.kayak_font  atkinson_hyperlegible_regular.kayak_font
assets/images/: Sprite-0001.aseprite
assets/sprites/: tilemap_atlas_new.aseprite
src/: main.rs
src/client/: mod.rs
src/client/graphical/: inputs.rs  load_assets.rs  mod.rs
src/client/menus/: main_menu.rs  mod.rs
src/client/networking/: mod.rs
src/client/ui/: mod.rs
src/client/ui/components/: button.rs  main_menu.rs  mod.rs  turn_timer.rs
src/common/: config.rs  mod.rs
src/common/logic/: gameboard_gen.rs  mod.rs  neo_gameboard.rs  units.rs
src/common/networking/: schema.rs
src/game/: gameboard_gen.rs  mod.rs  terrain.rs  units.rs
src/server/: mod.rs
src/server/console/: mod.rs
src/server/logic/: mod.rs
src/server/networking/: mod.rs
src/visuals/: inputs.rs  mod.rs  sprites.rs
