[package]
name = "project_calamity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
bevy-inspector-egui = "0.18.1"
bevy_quinnet = "0.4.0"
noise = "0.8.2"
rand = "0.8.5"
serde = "1.0.160"
toml = "0.7.3"
